--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,31 @@
-
 * {
+  background-color: white;
+  color: black;
+}
+
+div.banner-header {
+  width: 100vw;
   background-color: black;
-  color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: auto 0 0;
+  border: 0px;
+  padding: 0px;
 }
 
 div.myname {
+  width: 60%;
   min-width: 128px;
   max-width: 512px;
-  background-color: black;
-
+  margin: auto 10 10;
+  border: 0px;
+  padding: 10px;
+  background-color: inherit;
 }
 
 div.myname img {
+  background-color: black;
   width: 100%;
 }
 
@@ -24,3 +38,29 @@ div h3 {
   line-height: 2rem;
   color: white;
 }
+
+div.banner-footer {
+  width: 100vw;
+  background-color: black;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  border: 0px;
+  padding: 0px;
+}
+
+div.social {
+  background-color: inherit;
+  color: white;
+  height: 15vh;
+  max-height: 675px;/* 125% of the LinkedIn icon's height */
+  margin: auto;
+}
+
+div.social img {
+  background-color: black;
+  height: 80%;
+  max-height: 540px;/* Size of the official LinkedIn brand icon */
+  padding: 25px;
+}
+
