--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
   color: white;
 }
 
+div.container {
+  float: left;
+}
+
 div.banner-header {
   width: 100vw;
   background-color: black;
@@ -43,6 +47,15 @@ div.splash-portfolio {
   justify-content: center;
 }
 
+div.splash-section {
+  width: 100vw;
+  height: 320px;
+  left: 0;
+  margin: auto 0 0;
+  padding: 0px;
+  background-color: red;
+}
+
 div h1 {
   width: 50%;
   font-size: 10vw;
@@ -51,6 +64,10 @@ div h1 {
   text-transform: uppercase;
   background-color: transparent;
   color: white;
+}
+
+h3 {
+  text-transform: capitalize;
 }
 
 
@@ -63,7 +80,7 @@ div.banner-footer {
   left: 0;
   border: 0px;
   padding: 10px;
-  z-index: -5;
+  z-index: 3;
   background-color: black;
   display: flex;
   align-items: center;
