--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,10 @@ header .header-samples {
   color: #f2f2f2;
   font-family: 'Josefin Sans';
   font-size: 56px;
+  text-transform: lowercase;
   text-align: left;
+  padding-left: 10px;
+  line-height: 72px;
   font-weight: 500;
+  text-shadow: 2px 2px 8px #000;/* [?] [?] [8px blur] [color] */
 }
