--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,18 @@ header .header-samples {
   text-transform: lowercase;
   text-align: left;
   padding-left: 10px;
-  line-height: 72px;
+  line-height: 64px;
   font-weight: 500;
-  text-shadow: 2px 2px 8px #000;/* [?] [?] [8px blur] [color] */
+  text-shadow: 4px 4px 16px #000;/* [?] [?] [8px blur] [color] */
+}
+
+.index-banner h1 {
+  color: #f2f2f2;
+  font-family: 'Cormorant Garamond';
+  font-size: 28px;
+  text-align: center;
+  padding-left: 10px;
+  font-weight: 300;
+  font-style: italic;
+  text-shadow: 4px 4px 16px #000;/* [?] [?] [8px blur] [color] */
 }
