--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,8 @@ input, select {
 MY STYLING
 *********/
 
+/* HEADER */
+
 * {
   text-decoration: none;
 }
@@ -133,6 +135,7 @@ header .header-me {
 
 header nav ul {
   margin: auto 0 0;
+  width: fit-content;/* I'm not sure if this is necessary if this isn't centered... */
 }
 
 header nav ul li {
@@ -161,6 +164,12 @@ header .header-samples {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  display: table;/* Sets up the "table-cell" call in .vertical-banner, below */
+}
+
+.vertical-center {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .index-banner h2 {
@@ -172,7 +181,7 @@ header .header-samples {
   padding-left: 10px;
   line-height: 64px;
   font-weight: 500;
-  text-shadow: 4px 4px 16px #000;/* [?] [?] [8px blur] [color] */
+  text-shadow: 1px 3px 4px #000;/* [horizontal] [vertical] [blur] [color] */
 }
 
 .index-banner h1 {
@@ -184,4 +193,20 @@ header .header-samples {
   font-weight: 300;
   font-style: italic;
   text-shadow: 4px 4px 16px #000;/* [?] [?] [8px blur] [color] */
+}
+
+/* FOOTER */
+
+footer {
+  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding)*/
+  padding: 40px 40;
+  margin-top: 20px;
+  background-color: #111;
+}
+
+footer ol {
+  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding)*/
+  padding: 40px 40;
+  margin-top: 20px;
+  background-color: #111;
 }
