--- a/css/styles.css
+++ b/css/styles.css
@@ -250,8 +250,10 @@ section.index-projects p {
   font-variant: normal;
   font-family: 'Cormorant Garamond';
   font-size: 20px;
+  font-weight: 900;
   line-height: 25px;
   color: #805660;
+  width: 25vw;
 }
 
 section.index-projects p a {
@@ -261,7 +263,6 @@ section.index-projects p a {
   color: #f2f2f2;
   background-color: #805660;
   padding: 0 4px 0 4px;
-  ;
 }
 
 /* INDEX - ABOUT */
