--- a/css/styles.css
+++ b/css/styles.css
@@ -327,8 +327,8 @@ section.index-contact ul li {
 }
 
 section.index-contact ul li a {
-  color:#f2f2f2;
-  background-color: #ee488f77;
+  background-color: #f2f2f210;
+  color:#ee488f;
   padding: 4px;
 }
 
