BUGFIX: inconsistent section width on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,12 @@ MY STYLING
 html {
   scroll-behavior: smooth;
   /* For same-page anchor links */
+  height: -webkit-fill-available;
 }
 
 body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   background-color: #fff;
 }
 
@@ -78,7 +81,7 @@ main {
 
 .index-banner {
   width: 100%;
-  height: calc(100vh - 15vh);
+  height: calc(100vh - 100px);
   /* "100px" is the specified height of the header, above */
   background-image: url("../img/pat_icon1-2[180].png");
   background-repeat: no-repeat;
@@ -125,10 +128,10 @@ span.highlight {
 
 /* INDEX - PROJECTS */
 section.index-projects {
-  width: calc(100% - 80px);
-  /* 100% - (40px from left padding) - (40px from right padding) */
-  height: calc(100vh - 15vh);
-  padding: 40px 40px;
+  width: calc(100% - 40px);
+  /* 100% - (px from left padding) - (px from right padding) */
+  height: calc(100vh - 100px);
+  padding: 40px 20px;
   background-color: #493038;
   overflow: hidden;
   display: table;
@@ -137,7 +140,7 @@ section.index-projects {
 section.index-projects div {
   float: right;
   margin: 0;
-  padding: 40px;
+  padding: 20px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -164,6 +167,7 @@ section.index-projects p {
   line-height: 25px;
   color: #805660;
   width: 25vw;
+  min-width: 240px;
 }
 
 section.index-projects p a {
@@ -177,10 +181,10 @@ section.index-projects p a {
 
 /* INDEX - ABOUT */
 section.index-about {
-  width: calc(100% - 80px);
-  /* 100% - (40px from left padding) - (40px from right padding) */
-  height: calc(100vh - 15vh);
-  padding: 40px 40px;
+  width: calc(100% - 40px);
+  /* 100% - (px from left padding) - (px from right padding) */
+  height: calc(100vh - 100px);
+  padding: 40px 20px;
   background-color: #4b692f;
   overflow: hidden;
   display: table;
@@ -189,7 +193,7 @@ section.index-about {
 section.index-about article {
   float: left;
   margin: 0;
-  padding: 40px;
+  padding: 20px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -201,7 +205,10 @@ section.index-about article {
 }
 
 section.index-about article p {
+  width: 25vw;
+  min-width: 240px;
   display: block;
+  padding: 10px 0;
   list-style: none;
   font-variant: normal;
   text-align: left;
@@ -209,20 +216,29 @@ section.index-about article p {
 
 /* INDEX - CONTACT */
 section.index-contact {
-  width: calc(100% - 80px);
-  /* 100% - (40px from left padding) - (40px from right padding) */
-  height: calc(100vh - 15vh);
-  padding: 40px 40px;
+  width: calc(100% - 32px);
+  /* 100% - (px from left padding) - (px from right padding) */
+  height: calc(100vh - 100px);
+  padding: 40px 16px;
   background-color: #802458;
   overflow: hidden;
   display: table;
+}
+
+section.index-contact div {
+  margin: 0;
+  padding: 4px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-align: left;
 }
 
 section.index-contact ul {
   float: right;
   margin: 0;
   border: 8px double #ee488f;
-  padding: 40px;
+  padding: 16px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -249,7 +265,7 @@ section.index-contact ul li a {
 /* FOOTER */
 footer {
   width: calc(100% - 80px);
-  /* 100% - (40px from left padding) - (40px from right padding) */
+  /* 100% - (px from left padding) - (px from right padding) */
   padding: 40px 40px;
   background-color: #111;
   overflow: hidden;
