change default bg color to #111 to hide mobile bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ html {
 body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
-  background-color: #fff;
+  background-color: #111;
 }
 
 .anchor {
